--- a/quarty-one/src/main/docker/Dockerfile
+++ b/quarty-one/src/main/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM java:8
 VOLUME /tmp
-ADD quarty-two-1.0-SNAPSHOT.jar app.jar
+ADD quarty-one-1.0-SNAPSHOT.jar app.jar
 ENV TZ=Asia/Shanghai
 RUN bash -c 'touch /app.jar' \
     && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
